--- a/frontend/src/styles/sidebar.css
+++ b/frontend/src/styles/sidebar.css
@@ -30,6 +30,9 @@
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
+    text-decoration: inherit;
+    color: inherit;
+    width: 100%;
 }
 
 .select-main.active {
