--- a/frontend/src/styles/insert.css
+++ b/frontend/src/styles/insert.css
@@ -29,7 +29,7 @@ form {
 }
 
 .input-box.empty {
-  border-color: red;
+  border-color: rgb(204, 86, 86);
 }
 
 .input-box.disabled {
@@ -70,4 +70,22 @@ input[type=text] {
 
   select option {
     background: #DDEEFF;
+  }
+
+  .error-messages {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 15px;
+  }
+  
+  .error-messages ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  
+  .error-messages ul li {
+    margin: 5px 0;
   }
