--- a/frontend/src/styles/insert.css
+++ b/frontend/src/styles/insert.css
@@ -89,3 +89,20 @@ input[type=text] {
   .error-messages ul li {
     margin: 5px 0;
   }
+
+  .button {
+    font-size: 20px;
+    padding: 10px 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #DDEEFF;
+    cursor: pointer;
+    border: none;
+    /* border-radius: 5px; */
+    /* box-sizing: border-box; */
+  }
+
+  .button:hover{
+    background-color: #00418E;
+    color: #fff;
+  }
