--- a/frontend/src/styles/insert.css
+++ b/frontend/src/styles/insert.css
@@ -38,7 +38,7 @@ form {
   width: 100%;
 }
 
-input[type=text] {
+.input-group input[type=text] {
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -47,7 +47,7 @@ input[type=text] {
     border-style: solid;
   }
 
-  input[type=date] {
+.input-group input[type=date] {
     padding: 10px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -98,8 +98,6 @@ input[type=text] {
     background-color: #DDEEFF;
     cursor: pointer;
     border: none;
-    /* border-radius: 5px; */
-    /* box-sizing: border-box; */
   }
 
   .button:hover{
