--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -19,6 +19,7 @@
     border-bottom-color: #CECECE;
     border-bottom-style: solid;
     width: 256px;
+    box-sizing: border-box;
 }
 
 .logo p {
@@ -39,4 +40,47 @@
     background-color: #FBFDFF;
     border-radius: 10px;
     overflow: scroll;
+}
+
+.search-outer {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    position: relative;
+    /* box-sizing: border-box; */
+}
+
+.search {
+    border: none;
+    outline: none;
+    font-size: 20px;
+    width: 100%;
+    background-color: #FBFDFF;
+    padding: 5px 10px; /* Ajuste de padding para melhor visualização */
+}
+
+/* Dropdown styling */
+.dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-height: 200px; /* Define the max height for the dropdown */
+    overflow-y: auto; /* Adds scroll to the dropdown */
+    background-color: white;
+    border: 1px solid #CECECE;
+    border-radius: 0 0 10px 10px;
+    z-index: 1000; /* Ensure the dropdown is above other elements */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-item {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.dropdown-item:hover {
+    background-color: #F1F1F1;
 }
